--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "libpcd_1.0.1.tar.bz2": 543f555e78d0817ed7dc879f2e802d2d3ecaa2c0
+  libpcd-1.0.3-1.tar.gz: 7a155a21e265d6c6e609337021ce03ac23af4adc
